# argcmd

./: README.adoc  SECURITY.md  pyproject.toml
src/argcmd/: __init__.py  __main__.py
