[tool.poetry]
name = "argcmd"
version = "0.1.0"
description = ""
authors = ["Lee Braiden <leebraid@gmail.com>"]
license = "AGPL v3"
readme = "README.adoc"
packages = [
	{ include="argcmd", from="src" },
]

[tool.poetry.scripts]
argcmd-test = "argcmd.__main__:main"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
